--- a/prototype.html
+++ b/prototype.html
@@ -20,7 +20,7 @@
   <main>
     <div class="divices">
             <div class="divices_img">
-                <img src="images/prototype/Bilde2.png" alt="">
+                <img src="images/prototype/Bilde2.png" alt="The app & tablet soultion mixed">
             </div>
             <h1 class="divices_txt">
                 The HowCrowded provides a dual solution for people and organizations to make social distancing a breeze.<br>
@@ -36,7 +36,7 @@
             </p>
         </div>
         <div class="app_img wrapper_right">
-            <img src="images/prototype/sensor.png">
+            <img src="images/prototype/sensor.png" alt="Sensor">
         </div>
     </section>
     <section class="prototype">
@@ -49,13 +49,13 @@
             </p>
         </div>
         <div class="app_img wrapper_left">
-            <img class="tablet_img" src="images/prototype/green.png">
+            <img class="tablet_img" src="images/prototype/green.png" alt="Signs at entrance">
         </div>
     </section>
     <section class="prototype darkDiv">
         <h1 class="divices_txt"> The App Explained </h1>
         <div class="app_img wrapper_right">
-            <img src="images/prototype/Home_page.png">
+            <img src="images/prototype/Home_page.png" alt="Home page">
         </div>
         <div class="app_txt wrapper_left">
           <h1>The homepage</h1>
@@ -70,7 +70,7 @@
     </section>
     <section class="prototype darkDiv">
         <div class="app_img wrapper_left">
-            <img src="images/prototype/2Home_Search.png">
+            <img src="images/prototype/2Home_Search.png" alt="Search for public place">
         </div>
         <div class="app_txt wrapper_right">
             <h1>Search for a public place</h1>
@@ -94,13 +94,13 @@
             </p>
         </div>
         <div class="app_img wrapper_right">
-            <img src="images/prototype/3Home_Store_INFO.png">
+            <img src="images/prototype/3Home_Store_INFO.png" alt="Public place information">
         </div>
     </section>
     <section class="prototype">
       <h1 class="divices_txt"> Other App Features </h1>
         <div class="app_img wrapper_left">
-            <img class="app_img" src="images/prototype/4My%20Stores.png">
+            <img class="app_img" src="images/prototype/4My%20Stores.png" alt="Add yout store and get list overyour favourite places">
         </div>
         <div class="app_txt wrapper_right">
             <h1>Add your favorite store</h1>
@@ -116,7 +116,7 @@
             <p> The App provides an easy way to change to your preferred settings</p>
         </div>
         <div class="app_img wrapper_right">
-            <img src="images/prototype/5More.png">
+            <img src="images/prototype/5More.png" alt="Settings, about app and more">
         </div>
     </section>
 
