--- a/resources.html
+++ b/resources.html
@@ -43,19 +43,31 @@
       <br><br>
       <h2>References of images:</h2>
       <ol>
+        
+        <li>
+            <a  href="https://thenounproject.com/search/?creator=2957349&q=people&i=3593723" target="_blank"> 
+            Logo: Crowed</a>
+            <br><br> Image preview:
+            <br> <img src="images/Logo_Crowd.png" alt="logo_crowed" width="100" height="auto">
+            <br><br>The logo is a composite image created in Luncay.
+            <br><br> Artist: Musmellow 
+            <br><br> Date accessed: 10/11/2020
+        </li>
+        <li>
+            <a  href="https://thenounproject.com/search/?q=place&i=2847808" target="_blank"> 
+            Logo: Place</a>
+            <br><br> Image preview:
+            <br> <img src="images/Logo_Place.png" alt="logo_place" width="100" height="auto">
+            <br><br>The logo is a composite image created in Luncay.
+            <br><br> Artist: Qomariyah 
+            <br><br> Date accessed: 10/11/2020
+        </li>
 
-        <li> <b> Logo </b>
-        <br><br> Image preview:
-        <br><img src="images/HCicon.png" alt"logo" width="100" height="auto">
-        <br><br> The logo is a composite image created in ??????
-        <br><br> Link til icon hvis du ikke har laget selv?
-
-    </li>
 
 
         <li><a href="https://stock.adobe.com/no/images/social-distancing-keep-distance-in-public-society-people-to-protect-from-covid-19-coronavirus-outbreak-spreading-concept-businessman-and-woman-keep-distance-away-in-the-meeting-with-virus-pathogens/330511344?prev_url=detail" target="_blank">Distancing image on front page <img src="images/link.png" alt="link" width="15" height="auto"></a>
         <br><br> Image preview:
-        <br><img src="images/forsidebilde.png" alt"man and woman drawing circles to keep distance" width="100" height="auto">
+        <br><img src="images/forsidebilde.png" alt="man and woman drawing circles to keep distance" width="100" height="auto">
         <br><br> Artist: Nuthawut
         <br><br> Date accessed: 17/11/2020
         <br><br> The original picture has been altered by removing the background in Adobe PS
@@ -64,7 +76,7 @@
 
       <li><a href="https://stock.adobe.com/no/collections/rnfZN919Z5DzUHhSdoBuCqP2sBrLoehV?asset_id=329654183" target="_blank">Crowd Image on Front Page <img src="images/link.png" alt="link" width="15" height="auto"></a>
       <br><br> Image preview:
-      <br><img src="images/crowd.png" alt"crowd with masks" width="100" height="auto">
+      <br><img src="images/crowd.png" alt="crowd with masks" width="100" height="auto">
       <br><br> Artist: Angelina Bambina
       <br><br> Date accessed: 19/11/2020
     </li>
@@ -135,11 +147,11 @@
 
     <li> <b> Prototype Illustations on Prototype Page </b>
     <br><br> Image preview:
-    <br><img src="images/prototype/Bilde2.png" alt"prototype" width="100" height="auto">
+    <br><img src="images/prototype/Bilde2.png" alt="prototype" width="100" height="auto">
     <br><br> The prototype is a composite image created in ??????
     <br><br> Link til icon hvis du ikke har laget selv? <br><br>
 
-</li>
+    </li>
 
     <li><a href="https://stock.adobe.com/no/images/motion-sensor-icon-walking-man/217847955?prev_url=detail" target="_blank"> Link Icon on References Site  <img src="images/link.png" alt="link" width="15" height="auto"></a>
     <br><br> Image preview:
