--- a/prototype.html
+++ b/prototype.html
@@ -55,7 +55,7 @@
     <section class="prototype darkDiv">
         <h1 class="divices_txt"> The App Explained </h1>
         <div class="app_img wrapper_right">
-            <img src="images/prototype/Home_page.png" alt="Home page">
+            <img src="images/prototype/1Home.png" alt="Home page">
         </div>
         <div class="app_txt wrapper_left">
           <h1>The homepage</h1>
