--- a/resources.html
+++ b/resources.html
@@ -43,27 +43,20 @@
       <br><br>
       <h2>References of images:</h2>
       <ol>
-        
+
         <li>
-            <a  href="https://thenounproject.com/search/?creator=2957349&q=people&i=3593723" target="_blank"> 
-            Logo: Crowed</a>
+            <b> Logo <b>
             <br><br> Image preview:
-            <br> <img src="images/Logo_Crowd.png" alt="logo_crowed" width="100" height="auto">
+            <br> <img src="images/logowhite.png" alt="logo" width="100" height="auto">
             <br><br>The logo is a composite image created in Luncay.
-            <br><br> Artist: Musmellow 
+            <br><br> <a  href="https://thenounproject.com/search/?creator=2957349&q=people&i=3593723" target="_blank">
+            People Icon <img src="images/link.png" alt="link" width="15" height="auto"> </a>
+            <br><br> Artist: Musmellow
+            <br><br> <a  href="https://thenounproject.com/search/?q=place&i=2847808" target="_blank">
+            Location Icon <img src="images/link.png" alt="link" width="15" height="auto"> </a>
+            <br><br> Artist: Qomariyah
             <br><br> Date accessed: 10/11/2020
         </li>
-        <li>
-            <a  href="https://thenounproject.com/search/?q=place&i=2847808" target="_blank"> 
-            Logo: Place</a>
-            <br><br> Image preview:
-            <br> <img src="images/Logo_Place.png" alt="logo_place" width="100" height="auto">
-            <br><br>The logo is a composite image created in Luncay.
-            <br><br> Artist: Qomariyah 
-            <br><br> Date accessed: 10/11/2020
-        </li>
-
-
 
         <li><a href="https://stock.adobe.com/no/images/social-distancing-keep-distance-in-public-society-people-to-protect-from-covid-19-coronavirus-outbreak-spreading-concept-businessman-and-woman-keep-distance-away-in-the-meeting-with-virus-pathogens/330511344?prev_url=detail" target="_blank">Distancing image on front page <img src="images/link.png" alt="link" width="15" height="auto"></a>
         <br><br> Image preview:
