--- a/resources.html
+++ b/resources.html
@@ -45,7 +45,7 @@
       <ol>
 
         <li>
-            <b> Logo <b>
+            <b> Logo </b>
             <br><br> Image preview:
             <br> <img src="images/logowhite.png" alt="logo" width="100" height="auto">
             <br><br>The logo is a composite image created in Luncay.
