--- a/resources.html
+++ b/resources.html
@@ -58,7 +58,7 @@
             <br><br> Date accessed: 10/11/2020
         </li>
 
-        <li><a href="https://stock.adobe.com/no/images/social-distancing-keep-distance-in-public-society-people-to-protect-from-covid-19-coronavirus-outbreak-spreading-concept-businessman-and-woman-keep-distance-away-in-the-meeting-with-virus-pathogens/330511344?prev_url=detail" target="_blank">Distancing image on front page <img src="images/link.png" alt="link" width="15" height="auto"></a>
+        <li><a href="https://stock.adobe.com/no/images/social-distancing-keep-distance-in-public-society-people-to-protect-from-covid-19-coronavirus-outbreak-spreading-concept-businessman-and-woman-keep-distance-away-in-the-meeting-with-virus-pathogens/330511344?prev_url=detail&asset_id=331148757" target="_blank">Distancing image on front page <img src="images/link.png" alt="link" width="15" height="auto"></a>
         <br><br> Image preview:
         <br><img src="images/forsidebilde.png" alt="man and woman drawing circles to keep distance" width="100" height="auto">
         <br><br> Artist: Nuthawut
@@ -146,7 +146,7 @@
 
     </li>
 
-    <li><a href="https://stock.adobe.com/no/images/motion-sensor-icon-walking-man/217847955?prev_url=detail" target="_blank"> Link Icon on References Site  <img src="images/link.png" alt="link" width="15" height="auto"></a>
+    <li><a href="https://img.icons8.com/android/344/link.png" target="_blank"> Link Icon on References Site  <img src="images/link.png" alt="link" width="15" height="auto"></a>
     <br><br> Image preview:
     <br> <img src="images/link.png" alt="link icon" width="100" height="auto">
     <br><br> Artist: unknown
