--- a/team.html
+++ b/team.html
@@ -21,23 +21,23 @@
       <br><br>
       <ul class ="firkant">
         <li> <b> Eva Cecilie Traran</b>
-        <br><br> Studentnummer: S156762 <br><br>
+        <br><br> Student number: S156762 <br><br>
         </li>
 
         <li> <b> Ina Hoff-Nilsen </b>
-          <br><br> Studentnummer: S354553 <br><br>
+          <br><br> Student number: S354553 <br><br>
 
         <li> <b> Ole Bastian Løchen </b>
-          <br><br> Studentnummer: <br><br>
+          <br><br> Student number: <br><br>
 
         <li> <b> Daniel Hop Hansen </b>
-            <br><br> Studentnummer: <br><br>
+            <br><br> Student number: <br><br>
 
         <li> <b> Siem Fitwi Fissuh</b>
-          <br><br> Studentnummer: S351913<br><br>
+          <br><br> Student number: S351913<br><br>
 
         <li> <b> Zandra Max </b>
-          <br><br> Studentnummer: <br><br>
+          <br><br> Student number: <br><br>
 
       </ul>
     </div>
