--- a/prototype.html
+++ b/prototype.html
@@ -49,7 +49,7 @@
             </p>
         </div>
         <div class="app_img wrapper_left">
-            <img class="tablet_img" src="images/prototype/green.png" alt="Signs at entrance">
+            <img class="tablet_img" src="images/prototype/Green.png" alt="Signs at entrance">
         </div>
     </section>
     <section class="prototype darkDiv">
