--- a/team.html
+++ b/team.html
@@ -30,7 +30,7 @@
           <br><br> Studentnummer: <br><br>
 
         <li> <b> Daniel Hop Hansen </b>
-            <br><br> Studentnummer: <br><br>
+            <br><br> Studentnummer: S354535<br><br>
 
         <li> <b> Siem Fitwi </b>
           <br><br> Studentnummer: <br><br>
