--- a/team.html
+++ b/team.html
@@ -31,7 +31,7 @@
           <br><br> Student number: <br><br>
 
         <li> <b> Daniel Hop Hansen </b>
-            <br><br> Student number: <br><br>
+            <br><br> Student number: S354535<br><br>
 
         <li> <b> Siem Fitwi Fissuh</b>
           <br><br> Student number: S351913<br><br>
