--- a/team.html
+++ b/team.html
@@ -37,7 +37,7 @@
           <br><br> Student number: S351913<br><br>
 
         <li> <b> Zandra Max </b>
-          <br><br> Student number: <br><br>
+          <br><br> Student number: S333772<br><br>
 
       </ul>
     </div>
