skrevet mer på prototype siden

--- a/prototype.html
+++ b/prototype.html
@@ -30,9 +30,11 @@
         <div class="app_txt wrapper_left">
             <h1>Sensors </h1>
             <p>
-                Sensors are placed at the opening of the locations to register people going in and out.
+                Sensors are placed at the entrance of the location in order to to register the number of people going in and out
+                of the location.
                 <br>
-                This provides real-time information about how many people is in the location at a given time. Addtionally, the numbers can be used for forecasting.
+                This provides real-time information about how many people there are in the location at a given time.
+                Additionally, the numbers can be used for forecasting.
             </p>
         </div>
         <div class="app_img wrapper_right">
@@ -41,11 +43,13 @@
     </section>
     <section class="prototype">
         <div class="app_txt wrapper_right">
-            <h1> Signs at entrance </h1>
+            <h1> Signs by the entrance </h1>
             <p>
-                The service can be used by organization to use a screen sign at the entrance
+                Organizations and businesses can use a screen by the entrance for monitoring the amount of people at the location.
                 <br>
-                The screen is bright green when one can enter, and red when the visitor has to wait.
+                The screen tells visitors whether it's enough space for them inside.
+                The screen is either green or red letting the visitor know that it's safe for them to go inside.
+                It also tells the visitor how many there are currently inside, and the total capacity for the location.
             </p>
         </div>
         <div class="app_img wrapper_left">
@@ -53,18 +57,19 @@
         </div>
     </section>
     <section class="prototype darkDiv">
-        <h1 class="divices_txt"> The App Explained </h1>
+        <h1 class="divices_txt"> The app explained </h1>
         <div class="app_img wrapper_right">
             <img src="images/prototype/1Home.png" alt="Home page">
         </div>
         <div class="app_txt wrapper_left">
           <h1>The homepage</h1>
           <p>
-              When opening the app, you have multiple ways to choose the public place you want
+              When opening the app, this is the first page you will see.
+              At this page, you have multiple ways to choose the public place you want
               information about.
               <br>
               You could either choose a category, and the app will provide related places, or you could use the search function.
-              You will also have the possibility to save your favourite places for future use.
+              You will also have the possibility to save your favourite and most used locations for future use.
           </p>
       </div>
     </section>
@@ -76,9 +81,12 @@
             <h1>Search for a public place</h1>
             <p>
                 If you already know the name of the place that you want to visit,
-                you can use the search function to find the place.
+                you can use the search function to find the place by typing in the name.
                 When searching for a place, the app will tell you if there are similar places nearby,
-                making it easier choosing a place less crowded.
+                making it easier choosing a related, less crowded location.
+                The search results forms a list with the total capacity for the locations,
+                as well as the number of people currently at the location. For more information,
+                you can click on a specific location.
             </p>
         </div>
     </section>
@@ -90,7 +98,7 @@
                 of the place, as well as the number of people there in real time.
                 You will also be able to see a graph of popular times for the place, in order to plan your trip.
                 <br>
-                The app will also provide additional information, such as the address and opening hours.
+                The app will also provide additional information on this page, such as the location address and opening hours.
             </p>
         </div>
         <div class="app_img wrapper_right">
@@ -98,15 +106,17 @@
         </div>
     </section>
     <section class="prototype">
-      <h1 class="divices_txt"> Other App Features </h1>
+      <h1 class="divices_txt"> Other app features </h1>
         <div class="app_img wrapper_left">
             <img class="app_img" src="images/prototype/4My%20Stores.png" alt="Add yout store and get list overyour favourite places">
         </div>
         <div class="app_txt wrapper_right">
-            <h1>Add your favorite store</h1>
+            <h1>Add your favorite location</h1>
             <p>
                 For quicker access to information, you will be able to save a place, for instance your nearby store, to "My stores".
-                You will get a list over your favourite places with the capacity, gathered in one page.
+                You will get a list over your favourite places with the total capacity and the current number of people.
+                This will contribute in making the user experience seamless. If you want to remove a location from your list,
+                you can do this any time by pressing the star button.
             </p>
         </div>
     </section>
