--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title>HowCrowded</title>
   <meta charset="UTF-8">
   <link rel="stylesheet" type="text/css" href="css/style.css">
+  <script src="js/script.js" charset="utf-8"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
@@ -14,7 +15,23 @@
       <a href="solution.html">Solution</a>
       <a href="prototype.html">Prototype</a>
     </nav>
-    <div class="main">
+    <nav id="mobile-nav">
+      <a id="mob_logo" href="index.html">
+        <img src="images\logo.PNG" alt="Logo">
+      </a>
+      <label>
+      <div class="mobile-menu">
+        <img src="images/menu.png" alt="show menu">
+        <input id="menu_show" type="checkbox" name="" value="" hidden onchange="moveIntro()">
+        <div class="mob-urls" hidden>
+          <a href="problem.html">Challenge</a>
+          <a href="solution.html">Solution</a>
+          <a href="prototype.html">Prototype</a>
+        </div>
+      </div>
+      </label>
+    </nav>
+    <div id="main" class="main">
       <a href="https://www.un.org/sustainabledevelopment/health/"><img id="sustainable-goal3" class="images" src="images/goal_3.png" alt="Sustainable Goal 3: Good health and well-being"></a>
       <div class="intro">
         <img id="distancing" class="images" src="images/forsidebilde.png" alt="Illustration of social distancing">
