Alle sider har mobil navbar

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </div>
       </label>
     </nav>
-    <div id="main" class="main">
+    <div class="main">
       <a href="https://www.un.org/sustainabledevelopment/health/"><img id="sustainable-goal3" class="images" src="images/goal_3.png" alt="Sustainable Goal 3: Good health and well-being"></a>
       <div class="intro">
         <img id="distancing" class="images" src="images/forsidebilde.png" alt="Illustration of social distancing">
