--- a/prototype.html
+++ b/prototype.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="js/script.js" charset="utf-8"></script>
 </head>
 <body>
   <div class="content">
@@ -13,6 +14,22 @@
       <a href="problem.html">Challenge</a>
       <a href="solution.html">Solution</a>
       <a href="prototype.html">Prototype</a>
+    </nav>
+    <nav id="mobile-nav">
+      <a id="mob_logo" href="index.html">
+        <img src="images\logo.PNG" alt="Logo">
+      </a>
+      <label>
+      <div class="mobile-menu">
+        <img src="images/menu.png" alt="show menu">
+        <input id="menu_show" type="checkbox" name="" value="" hidden onchange="moveIntro()">
+        <div class="mob-urls" hidden>
+          <a href="problem.html">Challenge</a>
+          <a href="solution.html">Solution</a>
+          <a href="prototype.html">Prototype</a>
+        </div>
+      </div>
+      </label>
     </nav>
     <div class="main">
     </div>
