--- a/problem.html
+++ b/problem.html
@@ -107,7 +107,7 @@
             </div>
             <footer class="footer">
               <div class="logo">
-                <img src="images/logowhite.png" alt="Logo" height="70" width="auto">
+                <a href="index.html"><img src="images/logowhite.png" alt="Logo" height="70" width="auto"></a>
               </div>
               <div class="footer-resources">
                 <a href="resources.html">References</a>
