endret formulering under add your favourites

--- a/prototype.html
+++ b/prototype.html
@@ -128,12 +128,12 @@
             <img class="app_img" src="images/prototype/4My%20Stores.png" alt="Add yout store and get list overyour favourite places">
         </div>
         <div class="app_txt wrapper_right">
-            <h1>Add your favorite location</h1>
+            <h1>Add your favourite locations</h1>
             <p>
                 For quicker access to information, you will be able to save a place, for instance your nearby store, to "My stores".
                 You will get a list over your favourite places with the total capacity and the current number of people.
                 This will contribute in making the user experience seamless. If you want to remove a location from your list,
-                you can do this any time by pressing the star button.
+                you can do this at any time.
             </p>
         </div>
     </section>
