--- a/team.html
+++ b/team.html
@@ -43,7 +43,7 @@
           <br><br> Student number: S354553 <br><br>
 
         <li> <b> Ole Bastian Løchen </b>
-          <br><br> Student number: <br><br>
+          <br><br> Student number: S333758<br><br>
 
         <li> <b> Daniel Hop Hansen </b>
             <br><br> Student number: S354535<br><br>
