--- a/resources.html
+++ b/resources.html
@@ -155,14 +155,6 @@
     <br><br>
     </li>
 
-    <li> <b> Prototype Illustations on Prototype Page </b>
-    <br><br> Image preview:
-    <br><img src="images/prototype/Bilde2.png" alt="prototype" width="100" height="auto">
-    <br><br> The prototype is a composite image created in ??????
-    <br><br> Link til icon hvis du ikke har laget selv? <br><br>
-
-    </li>
-
     <li><a href="https://img.icons8.com/android/344/link.png" target="_blank"> Link Icon on References Page  <img src="images/link.png" alt="link" width="15" height="auto"></a>
     <br><br> Image preview:
     <br> <img src="images/link.png" alt="link icon" width="100" height="auto">
@@ -172,11 +164,12 @@
     </li>
     <!--Prototype-->
     <li>
-      <b>Category icons</b>
+      <b>Prototype Illustations on Prototype Page</b>
       <br><br> Image preview:
-      <br> <img src="images/category_icons.png" alt="category icons" width="200" height="auto">
-      <br><br>Image has been altred in Lunacy change color
-      <br><br> <a  href="https://thenounproject.com/search/?q=Grocery&i=3478945" target="_blank">
+      <br> <img src="images/prototype/1Home.png" alt="category icons" width="150" height="auto">
+      <br><br>The Images has been edited in Lunacy.<br><br>
+      <b>Category icons</b>
+      <br> <a  href="https://thenounproject.com/search/?q=Grocery&i=3478945" target="_blank">
       Grocery icon <img src="images/link.png" alt="link" width="15" height="auto"> </a>
       <br><br> Artist: iconixar
       <br><br> <a  href="https://thenounproject.com/search/?q=Fashion&i=1358479" target="_blank">
@@ -188,16 +181,37 @@
       <br><br> <a  href="https://thenounproject.com/search/?q=Sports+%26+leisure&i=2019092" target="_blank">
       Sports & leisure icon<img src="images/link.png" alt="link" width="15" height="auto"> </a>
       <br><br> Artist: Wahyu Adam Pratama
-
       <br><br> <a  href="https://thenounproject.com/search/?q=Banks&i=2262800" target="_blank">
         Bank icon<img src="images/link.png" alt="link" width="15" height="auto"> </a>
         <br><br> Artist: ProSymbols
-
         <br><br> <a  href="https://thenounproject.com/search/?q=Fitness+center&i=3149688" target="_blank">
           Gym icon<img src="images/link.png" alt="link" width="15" height="auto"> </a>
           <br><br> Artist: Vectors Point
-      <br><br> Date accessed: 10/11/2020
+      <br><br> Date accessed: 10/11/2020<br><br>
+      <b>Menu</b>
+      <br> <a  href="https://thenounproject.com/search/?q=Grocery&i=3478945" target="_blank">
+      Store icon <img src="images/link.png" alt="link" width="15" height="auto"> </a>
+      <br><br> Artist: iconixar
+      <br><br> <a  href="https://thenounproject.com/search/?q=Fashion&i=1358479" target="_blank">
+      Settings icon<img src="images/link.png" alt="link" width="15" height="auto"> </a>
+      <br><br> Artist: Edwin PM
+        </li>
+    <li>
+      <b>Icons for signs by the entrance</b>
+      <br><br> Image preview:
+      <br> <img src="images/prototype/Bilde2.png" alt="category icons" width="200" height="auto">
+      <br><br>The images are composite in Lunacy
+      <br><br> <a  href="https://thenounproject.com/search/?q=ok&i=1073636" target="_blank">
+      Ok icon <img src="images/link.png" alt="link" width="15" height="auto"> </a>
+      <br><br> <a  href="https://thenounproject.com/term/minus/1073641/" target="_blank">
+      Stop icon<img src="images/link.png" alt="link" width="15" height="auto"> </a>
+      <br><br> Artist: Murthy2819
+      <br><br> <a  href="https://thenounproject.com/term/ipad-pro/2185786/" target="_blank">
+      Ipad-pro<img src="images/link.png" alt="link" width="15" height="auto"> </a>
+      <br><br> Artist: Yeong Rong Kim
+      <br><br> Date accessed: 23/11/2020
     </li>
+    
 
 
       </ol>
