forslag til endring

--- a/index.html
+++ b/index.html
@@ -33,12 +33,22 @@
     </nav>
     <div class="main">
       <a href="https://www.un.org/sustainabledevelopment/health/"><img id="sustainable-goal3" class="images" src="images/goal_3.png" alt="Sustainable Goal 3: Good health and well-being"></a>
-      <div class="intro">
-        <img id="distancing" class="images" src="images/forsidebilde.png" alt="Illustration of social distancing">
-        <div class="primary-heading">
-          <h1>Makes social distancing easier</h1>
+
+      <div class="topflex-sol">
+        <div class="topflex-solleft">
+          <img src="images/forsidebilde.png" alt="Illustration of people keeping distance" width="600" heigth="auto">
+        </div>
+        <div class="topflex-solright">
+          <p>Makes social distancing easier</p>
         </div>
       </div>
+
+  <!--    <div class="intro">
+        <img id="distancing" class="images" src="images/forsidebilde.png" alt="Illustration of social distancing">
+       <div class="primary-heading">
+          <h1>Makes social distancing easier</h1>
+        </div>
+      </div> !-->
       <div class="scroll-down"></img><a>Scroll down</a><a href="#section-challenge"><img id="arrow-down" src="images/arrow-down.png" alt="Scroll Down"></a>
       </div>
 
