--- a/resources.html
+++ b/resources.html
@@ -164,47 +164,39 @@
     </li>
     <!--Prototype-->
     <li>
-<<<<<<< HEAD
-      <b>Prototype Illustations on Prototype Page</b>
+      <b>Prototype images found on Prototype page</b>
+      <br><br>The prototype images is a composite images createed in Lunacy Graphic design software. Icons has beed altred in Lunacy by changing color.
+      <br><a  href="https://thenounproject.com/search/?q=Grocery&i=3478945" target="_blank">
+      Lunacy Graphic design software <img src="images/link.png" alt="link" width="15" height="auto"></a>
       <br><br> Image preview:
       <br> <img src="images/prototype/1Home.png" alt="category icons" width="150" height="auto">
-      <br><br>The Images has been edited in Lunacy.<br><br>
-      <b>Category icons</b>
+      <br><br><b>Category icons</b>
       <br> <a  href="https://thenounproject.com/search/?q=Grocery&i=3478945" target="_blank">
-      Grocery icon <img src="images/link.png" alt="link" width="15" height="auto"> </a>
-=======
-      <b>Prototype and category icons found on Prototype Page</b>
-      <br><br> Image preview:
-      <br><img src="images/prototype/Bilde2.png" alt="prototype" width="200" height="auto">
-      <br> <img src="images/category_icons.png" alt="category icons" width="200" height="auto">
-      <br><br>This is a composite image created in Luncay. Icons has been altred in Lunacy by changing color
-      <br><br> <a  href="https://thenounproject.com/search/?q=Grocery&i=3478945" target="_blank">
       Grocery icon <img src="images/link.png" alt="link" width="15" height="auto"></a>
->>>>>>> f956143e2146b742fd38fac005487b9a16188822
       <br><br> Artist: iconixar
-      <br><br> <a  href="https://thenounproject.com/search/?q=Fashion&i=1358479" target="_blank">
+      <br> <a  href="https://thenounproject.com/search/?q=Fashion&i=1358479" target="_blank">
       Fashion icon<img src="images/link.png" alt="link" width="15" height="auto"></a>
       <br><br> Artist: Edwin PM
-      <br><br> <a  href="https://thenounproject.com/search/?q=monitor+tablet&i=1544311" target="_blank">
+      <br> <a  href="https://thenounproject.com/search/?q=monitor+tablet&i=1544311" target="_blank">
       Electronic icon <img src="images/link.png" alt="link" width="15" height="auto"></a>
       <br><br> Artist: Viral faisalovers
-      <br><br> <a  href="https://thenounproject.com/search/?q=Sports+%26+leisure&i=2019092" target="_blank">
+      <br> <a  href="https://thenounproject.com/search/?q=Sports+%26+leisure&i=2019092" target="_blank">
       Sports & leisure icon<img src="images/link.png" alt="link" width="15" height="auto"></a>
       <br><br> Artist: Wahyu Adam Pratama
-      <br><br> <a  href="https://thenounproject.com/search/?q=Banks&i=2262800" target="_blank">
+      <br> <a  href="https://thenounproject.com/search/?q=Banks&i=2262800" target="_blank">
         Bank icon<img src="images/link.png" alt="link" width="15" height="auto"></a>
         <br><br> Artist: ProSymbols
-        <br><br> <a  href="https://thenounproject.com/search/?q=Fitness+center&i=3149688" target="_blank">
+      <br> <a  href="https://thenounproject.com/search/?q=Fitness+center&i=3149688" target="_blank">
           Gym icon<img src="images/link.png" alt="link" width="15" height="auto"></a>
-          <br><br> Artist: Vectors Point
-      <br><br> Date accessed: 10/11/2020<br><br>
-      <b>Menu</b>
-      <br> <a  href="https://thenounproject.com/search/?q=Grocery&i=3478945" target="_blank">
+          <br><br> Artist: Vectors Point<br><br>
+      <b>Navigation icons</b>
+      <br><a  href="https://thenounproject.com/search/?q=Grocery&i=3478945" target="_blank">
       Store icon <img src="images/link.png" alt="link" width="15" height="auto"> </a>
       <br><br> Artist: iconixar
-      <br><br> <a  href="https://thenounproject.com/search/?q=Fashion&i=1358479" target="_blank">
+      <br> <a  href="https://thenounproject.com/search/?q=Fashion&i=1358479" target="_blank">
       Settings icon<img src="images/link.png" alt="link" width="15" height="auto"> </a>
       <br><br> Artist: Edwin PM
+      <br><br> Date accessed: 10/11/2020<br><br>
         </li>
     <li>
       <b>Icons for signs by the entrance</b>
