--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
       <div class="topflex-sol">
         <div class="topflex-solleft">
-          <img src="images/forsidebilde.png" alt="Illustration of people keeping distance" width="600" heigth="auto">
+          <img src="images/forsidebilde.png" alt="Illustration of social distancing" width="600" heigth="auto">
         </div>
         <div class="topflex-solright">
           <p>Makes social distancing easier</p>
