--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <img src="images/forsidebilde.png" alt="Illustration of social distancing" width="600" heigth="auto">
         </div>
         <div class="topflex-solright">
-          <p>Makes social distancing easier</p>
+          <p><b>Makes social <br> distancing easier</b></p>
         </div>
       </div>
 
