--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <a href="https://www.un.org/sustainabledevelopment/health/"><img id="sustainable-goal3" class="images" src="images/goal_3.png" alt="Sustainable Goal 3: Good health and well-being"></a>
 
       <div class="topflex-sol">
-        <div class="topflex-solleft">
+        <div class="topflex-solleft2">
           <img src="images/forsidebilde.png" alt="Illustration of social distancing" width="600" heigth="auto">
         </div>
         <div class="topflex-solright">
