--- a/prototype.html
+++ b/prototype.html
@@ -130,7 +130,7 @@
         <div class="app_txt wrapper_right">
             <h1>Add your favourite locations</h1>
             <p>
-                For quicker access to information, you will be able to save a place, for instance your nearby store, to "My stores".
+                For quicker access to information, you will be able to save a place, for instance your nearby store, to "My locations".
                 You will get a list over your favourite places with the total capacity and the current number of people.
                 This will contribute in making the user experience seamless. If you want to remove a location from your list,
                 you can do this at any time.
@@ -140,11 +140,11 @@
 </main>
 
 <footer class="footer">
-  <div class="logo">
-    <a href="index.html"><img src="images/logowhite.png" alt="Logo" height="70" width="auto"></a>
-  </div>
   <div class="footer-resources">
     <a href="resources.html">References</a>
+  </div>
+  <div class="logo">
+    <a href="index.html"><img src="images/logowhite.png" alt="Logo" height="70" width="auto"></a>
   </div>
   <div class="footer-team">
     <a href="team.html">Team members</a>
