--- a/problem.html
+++ b/problem.html
@@ -11,7 +11,7 @@
   <div class="content">
     <nav id="navbar">
       <a href="index.html"><img src="images\logo.PNG" alt="Logo"></a>
-      <a href="problem.html">Challenge</a>
+      <a class="active" href="problem.html">Challenge</a>
       <a href="solution.html">Solution</a>
       <a href="prototype.html">Prototype</a>
     </nav>
