--- a/prototype.html
+++ b/prototype.html
@@ -13,7 +13,7 @@
       <a href="index.html"><img src="images\logo.PNG" alt="Logo"></a>
       <a href="problem.html">Challenge</a>
       <a href="solution.html">Solution</a>
-      <a href="prototype.html">Prototype</a>
+      <a class="active" href="prototype.html">Prototype</a>
     </nav>
     <nav id="mobile-nav">
       <a id="mob_logo" href="index.html">
